set photon server settings in build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
             path: build/${{ matrix.targetPlatform }}
             retention-days: 2
 
-        - name: Cleanup artifacts
-          uses: geekyeggo/delete-artifact@v1
-          with:
-            name: build-${{ matrix.targetPlatform }}
+        # - name: Cleanup artifacts
+        #   uses: geekyeggo/delete-artifact@v1
+        #   with:
+        #     name: build-${{ matrix.targetPlatform }}
